# python-tycoon

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTIPLAYER_IMPLEMENTATION.md  README.md  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: build.yml
build_tools/: __init__.py  build_exe.py  bump_version.py
docs/: API.md  MULTIPLAYER_PROTOCOL.md  PROJECT_SUMMARY.md  SETUP.md  TUTORIAL.md
examples/: __init__.py  config_example.json  multiplayer_demo.py
examples/demo_tycoon/: __init__.py  main.py
examples/menu_demo/: README.md  main.py
tests/: test_ai_player.py  test_asset_loader.py  test_config.py  test_economy.py  test_entities.py  test_events.py  test_networking.py  test_resources.py  test_ui_components.py  test_ui_manager.py  test_utils.py  test_version.py  test_world_map.py
tycoon_engine/: __init__.py  version.py
tycoon_engine/core/: config.py  events.py  game.py  state_manager.py
tycoon_engine/entities/: __init__.py  ai_player.py  economy.py  entity.py  resources.py  world_map.py
tycoon_engine/networking/: __init__.py  client.py  server.py
tycoon_engine/systems/: __init__.py  ai_player.py  economy.py  world_map.py
tycoon_engine/ui/: __init__.py  components.py  renderer.py  ui_manager.py
tycoon_engine/ui/screens/: __init__.py  hud.py  main_menu.py  multiplayer.py  settings.py
tycoon_engine/utils/: asset_loader.py  helpers.py
